# graduate-Classes

./: READEME.MD  main.py  pyproject.toml
Spring 2025/Data Vis/Assignment 2/: Assignment 1.ipynb  Assignment2_Diamonds.py
Spring 2025/Data Vis/Assignment 3/: assignment3.ipynb
Spring 2025/Data Vis/Assignment 4/: NBA.csv  assignment4.ipynb
Spring 2025/Data Vis/Project 1/: music_data_analysis.ipynb
Spring 2025/Data Vis/in class/: Exercise 1.py  Exercise_Movies.ipynb  exercise 2.py  exercise 3.py  exercise 4.py  exercise 5.py  exercise 6.py  exercise 7.py
Spring 2025/Prob Stat 2/HW-1/: ps1.Rmd
Spring 2025/Prob Stat 2/HW-2/: dat_fluor.RData  precip.xlsx  ps2.Rmd
Spring 2025/Prob Stat 2/HW-3/: precip_formatted.RData  ps3 copy.Rmd  ps3-Junie.Rmd  ps3.Rmd
Spring 2025/Prob Stat 2/HW-4/: dat10.RData  dat_samp.RData  ps4 (1).Rmd  ps4-try1.Rmd  ps4.Rmd  ps4.docx
Spring 2025/Prob Stat 2/HW-6/: dat_cr_test.RData  dat_cr_train.RData  dat_cr_valid.RData  ps6.Rmd
Spring 2025/Prob Stat 2/MIDTERM/: dat1_1.RData  dat1_2.RData  dat1_3.RData  dat2.RData  dat3.RData  dat4.RData  dat5_test.RData  dat5_train.RData  midterm.Rmd  midterm.docx
Spring 2025/Prob Stat 2/final_project/: final_project.docx
Winter 2025/prob-stat/HW-1/: ps1.Rmd
Winter 2025/prob-stat/HW-2/: ps2.Rmd
Winter 2025/prob-stat/HW-3/: ps3.Rmd
Winter 2025/prob-stat/HW-4/: ps4.Rmd
Winter 2025/prob-stat/HW-6/: ps6.Rmd
Winter 2025/prob-stat/HW-7/: ps7.Rmd
Winter 2025/prob-stat/MIDTERM/: midterm.Rmd
Winter 2025/py-dev/HW-1/: Assignment1.py  (+1 more)
in-home/: HW-1-unit-tests.py  ben_funk_assignment1.py
(+38 files in other folders)
