[project]
name = "python-dev"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "keyring>=25.6.0",
    "matplotlib>=3.10.1",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "ttkbootstrap>=1.10.1",
]
